--- a/src/content/docs/showcase.mdx
+++ b/src/content/docs/showcase.mdx
@@ -16,4 +16,13 @@ Here are all the cool demos and projects that people have built with Formwerk. I
     external
     client:idle
   />
+
+  <PreviewCard
+    title="FM Radio"
+    description="Showcase of a slider built to look like a FM radio dial."
+    link="https://stackblitz.com/edit/formwerk-fm-radio"
+    src="/thumbs/fm-radio.mp4"
+    external
+    client:idle
+  />
 </div>
