--- a/src/content/docs/guides/fields/_partials/_slider.mdx
+++ b/src/content/docs/guides/fields/_partials/_slider.mdx
@@ -26,7 +26,7 @@ const thumbData = useThumbMetadata(0);
     </div>
 
     <div v-bind="errorMessageProps" class="error">
-      <div v-if="errorMessage" class="error-message">{{ errorMessage }}</div>
+      {{ errorMessage }}
     </div>
   </div>
 </template>
