feat: added custom field entry to composables

--- a/src/content/docs/guides/composables.mdx
+++ b/src/content/docs/guides/composables.mdx
@@ -73,6 +73,13 @@ Each of these composables helps you build a high-quality and accessible form con
     link="/guides/fields/hidden-fields/"
     src="/thumbs/hidden.mp4"
   />
+  <PreviewCard
+    client:idle
+    title="Custom Fields"
+    description="Useful for creating unconventional form controls, or wrapping 3rd party components."
+    link="/guides/fields/custom-fields/"
+    src="/thumbs/custom.mp4"
+  />
 </div>
 
 ## Forms
