feat: combobox anatomy

--- a/src/content/docs/guides/composables.mdx
+++ b/src/content/docs/guides/composables.mdx
@@ -1,6 +1,6 @@
 ---
 title: Composables
-description: A guide in my new Starlight docs site.
+description: Learn how to use the composables to build your own form controls.
 ---
 
 import PreviewCard from '@components/PreviewCard.vue';
@@ -79,6 +79,13 @@ Each of these composables helps you build a high-quality and accessible form con
     description="Useful for creating unconventional form controls, or wrapping 3rd party components."
     link="/guides/fields/custom-fields/"
     src="/thumbs/custom.mp4"
+  />
+  <PreviewCard
+    client:idle
+    title="ComboBox Fields"
+    description="Searchable Text Inputs with a dropdown list of options for quick selection."
+    link="/guides/fields/comboboxes/"
+    src="/thumbs/combobox.mp4"
   />
 </div>
 
