docs: update `/guides/forms/validation`

--- a/src/content/docs/guides/forms/validation.mdx
+++ b/src/content/docs/guides/forms/validation.mdx
@@ -59,7 +59,7 @@ Formwerk supports the [Standard Schema Spec](https://github.com/standard-schema/
 
 At the moment, the following providers implement the Standard Schema Spec and are supported by Formwerk:
 
-- [Zod](https://zod.dev/) (Soon)
+- [Zod](https://zod.dev/)
 - [Valibot](https://valibot.dev/)
 - [Arktype](https://arktype.io/)
 
