--- a/src/content/docs/guides/fields/comboboxes.mdx
+++ b/src/content/docs/guides/fields/comboboxes.mdx
@@ -38,6 +38,7 @@ When focusing the text input, and menu is closed:
 | ------------------------------------------ | ----------------------- |
 | <Kbd code="ArrowDown" label="ArrowDown" /> | Opens the options menu. |
 | <Kbd code="ArrowUp" label="ArrowUp" />     | Opens the options menu. |
+| <Kbd code="Escape" label="Escape" />       | Clears the input value. |
 
 When focusing the text input, and menu is open:
 
@@ -50,6 +51,7 @@ When focusing the text input, and menu is open:
 | <Kbd code="PageUp" label="Page Up" />       | Highlights the first option.                 |
 | <Kbd code="End" label="End" />              | Highlights the last option.                  |
 | <Kbd code="PageDown" label="Page Down" />   | Highlights the last option.                  |
+| <Kbd code="Escape" label="Escape" />        | Closes the options menu if open.             |
 
 Most people aren't aware of these keyboard shortcuts, but they do make a big difference in the user experience for keyboard users.
 
@@ -234,6 +236,35 @@ const schema = z
 
 </MdxRepl>
 
+## Filtering
+
+### Default Filter
+
+You probably have noticed we are using `useDefaultFilter` to filter the options using the `contains` strategy. By default, comboboxes do not know how to filter the options.
+
+Aside from the `contains` strategy, Formwerk also offers the `startsWith`, `endsWith` and `equals` strategies.
+
+```ts
+import { useDefaultFilter } from '@formwerk/core';
+
+const { startsWith, endsWith, equals } = useDefaultFilter({
+  caseSensitive: false,
+});
+```
+
+### Debouncing
+
+Filtering runs on every keystroke, but you can debounce it by passing the `debounceMs` option to `useDefaultFilter`.
+
+```ts {5}
+import { useDefaultFilter } from '@formwerk/core';
+
+const { startsWith, endsWith, equals } = useDefaultFilter({
+  caseSensitive: false,
+  debounceMs: 300,
+});
+```
+
 ## Usage
 
 ### Disabled
@@ -356,6 +387,62 @@ import OptionItem from './OptionItem.vue';
 
 </MdxRepl>
 
+### Custom Values
+
+ComboBoxes by default do not allow custom values. If you need to allow custom values, you need to pass the `onNewValue` prop/hander to `useComboBox`. The `onNewValue` prop is a function that must return the both the new value and the label to use for it.
+
+<MdxRepl client:load preview-size="lg">
+
+<div slot="!ComboBox.vue">
+  <ComboPartial />
+</div>
+
+<div slot="!OptionItem.vue">
+  <OptionPartial />
+</div>
+
+<div slot="App.vue">
+
+```vue
+<script setup lang="ts">
+import { ref } from 'vue';
+import ComboBox from './ComboBox.vue';
+import OptionItem from './OptionItem.vue';
+
+const drinks = ref([
+  { value: 'coffee', label: 'Coffee ☕️' },
+  { value: 'tea', label: 'Tea 🍵' },
+  { value: 'milk', label: 'Milk 🥛' },
+]);
+
+function onNewDrink(value: string) {
+  const newDrink = { value, label: `${value} 🍹` };
+  drinks.value.push(newDrink);
+
+  return newDrink;
+}
+</script>
+
+<template>
+  <ComboBox
+    label="Select a drink"
+    placeholder="Search..."
+    @new-value="onNewDrink"
+  >
+    <OptionItem
+      v-for="drink in drinks"
+      :key="drink.value"
+      :label="drink.label"
+      :value="drink.value"
+    />
+  </ComboBox>
+</template>
+```
+
+</div>
+
+</MdxRepl>
+
 ## Styling
 
 When styling the select field, you need to be aware of the following...
@@ -413,3 +500,7 @@ These are the properties that can be passed to the `useComboBox` composable.
 These are the properties in the object returned by the `useSelect` composable.
 
 <MdxTableAPI fnName="useComboBox" />
+
+### useDefaultFilter
+
+<MdxTableAPI typeName="FilterOptions" />
