feat: add poster for custom fields

--- a/src/content/docs/guides/composables.mdx
+++ b/src/content/docs/guides/composables.mdx
@@ -61,6 +61,13 @@ Each of these composables helps you build a high-quality and accessible form con
   />
   <PreviewCard
     client:idle
+    title="ComboBox Fields"
+    description="Searchable Text Inputs with a dropdown list of options for quick selection."
+    link="/guides/fields/comboboxes/"
+    src="/thumbs/combobox.mp4"
+  />
+  <PreviewCard
+    client:idle
     title="Sliders"
     description="Allows users to select one or more values from a range of values."
     link="/guides/fields/sliders/"
@@ -79,14 +86,17 @@ Each of these composables helps you build a high-quality and accessible form con
     description="Useful for creating unconventional form controls, or wrapping 3rd party components."
     link="/guides/fields/custom-fields/"
     src="/thumbs/custom.mp4"
-  />
-  <PreviewCard
-    client:idle
-    title="ComboBox Fields"
-    description="Searchable Text Inputs with a dropdown list of options for quick selection."
-    link="/guides/fields/comboboxes/"
-    src="/thumbs/combobox.mp4"
-  />
+  >
+    <div class="flex h-full w-full items-center justify-center bg-zinc-700">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        class="size-20 fill-current text-emerald-500"
+        viewBox="0 0 256 256"
+      >
+        <path d="M218.29,182.17a12,12,0,0,1-16.47,4.12L140,149.19V216a12,12,0,0,1-24,0V149.19l-61.82,37.1a12,12,0,1,1-12.35-20.58L104.68,128,41.83,90.29A12,12,0,1,1,54.18,69.71L116,106.81V40a12,12,0,0,1,24,0v66.81l61.82-37.1a12,12,0,1,1,12.35,20.58L151.32,128l62.85,37.71A12,12,0,0,1,218.29,182.17Z"></path>
+      </svg>
+    </div>
+  </PreviewCard>
 </div>
 
 ## Forms
